# KeyXpert

./: .gitignore  README.md  logo.ai  nginx-config  proof_of_concept.cpp  release.sh  start-on-boot.bat
mapper_service/: Cargo.toml  build.rs
mapper_service/src/: app.rs  constants.rs  lib.rs  main.rs  models.rs  shared_constants.rs  shared_models.rs  utils.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json
ui/src/: App.svelte  models.ts  styles.css  utils.ts
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/icons/: logo.icns
ui/src-tauri/src/: commands.rs  constants.rs  main.rs  models.rs  utils.rs
ui/src/components/: AdvancedSettings.svelte  AdvancedSettingsStore.ts  Key.css  Key.svelte  KeyCombination.svelte  ProfileDetails.svelte  RebindItem.svelte  RebindList.svelte
ui/src/components/Modal/: Modal.svelte  ModalStore.ts
