[package]
name = "mapper_service"
version = "0.0.1"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
description = "TODO"
license-file = "../LICENSE"

[profile.release]
opt-level = 3

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
home = "0.5.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[target.'cfg(windows)'.build-dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }