[package]
name = "mapper_service"
version = "1.0.0"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
description = "TODO"
license-file = "../LICENSE"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
home = "0.5"
chrono = "0.4"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[build-dependencies]
winres = "0.1.12"
winapi = { version = "0.3.9", features = ["winuser"] }
