[package]
name = "ui"
version = "0.0.1"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
description = "TODO"
license = "../../LICENSE"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["app-all", "os-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
anyhow = "1.0"
mapper_service = { path = "../../mapper_service" }
reqwest = { version = "0.11", features = ["blocking"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
