[package]
name = "ui"
version = "0.0.2"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
description = "TODO"
license = "../../LICENSE"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
anyhow = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["blocking"] }

tauri = { version = "1.4", features = [ "window-set-position", "window-set-size", "app-all", "shell-open", "os-all"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mapper_service = { path = "../../mapper_service" }
sysinfo = "0.29.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
