[package]
name = "ui"
version = "1.0.0"
authors = ["Tomáš Diblík <dibla.tomas@post.cz>"]
edition = "2021"
description = "TODO"
license = "../../LICENSE"

[profile.release]
opt-level = 3
strip = "symbols"
lto = true

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
mapper_service = { path = "../../mapper_service" }
anyhow = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["blocking"] }
tauri = { version = "1.4", features = [ "window-set-position", "window-set-size", "app-all", "shell-open", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.50"
sysinfo = "0.29.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
